[gd_scene load_steps=43 format=2]

[ext_resource path="res://Art/Witch/B_witch_idle.png" type="Texture" id=1]
[ext_resource path="res://Art/Witch/B_witch_death.png" type="Texture" id=2]
[ext_resource path="res://Art/Witch/B_witch_take_damage.png" type="Texture" id=3]
[ext_resource path="res://Art/Witch/B_witch_run.png" type="Texture" id=4]
[ext_resource path="res://Art/Witch/B_witch_charge.png" type="Texture" id=5]
[ext_resource path="res://Scripts/witch.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 288, 32, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 336, 32, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 32, 48 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 336, 32, 48 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 32, 48 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 432, 32, 48 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "charge",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 35.1532, 39.2048 )

[sub_resource type="CircleShape2D" id=35]
radius = 276.0

[sub_resource type="CircleShape2D" id=36]
radius = 130.004

[node name="Witch" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, -2.91373 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 33 )
animation = "damage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.7622, -1.5874 )
shape = SubResource( 34 )

[node name="Follow Detection" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Follow Detection"]
position = Vector2( 4, -1 )
shape = SubResource( 35 )

[node name="Orb Zone" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Orb Zone"]
shape = SubResource( 36 )

[node name="orb_shooting_timer" type="Timer" parent="."]

[connection signal="body_entered" from="Follow Detection" to="." method="_on_Follow_Detection_body_entered"]
[connection signal="body_exited" from="Follow Detection" to="." method="_on_Follow_Detection_body_exited"]
[connection signal="body_entered" from="Orb Zone" to="." method="_on_Orb_Zone_body_entered"]
[connection signal="body_exited" from="Orb Zone" to="." method="_on_Orb_Zone_body_exited"]
[connection signal="timeout" from="orb_shooting_timer" to="." method="fire_orb"]
